Fix default value not showing in options on reset

--- a/callout-emojis.css
+++ b/callout-emojis.css
@@ -20,7 +20,7 @@ settings:
         description: Change emoji skin tone
         type: class-select
         allowEmpty: false
-        default: Default
+        default: default
         options:
             - 
                 label: Default
